--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -71,7 +71,7 @@
             </div>
             <br>
             <div title="The set of IBDF files to be included in the DB.  Do not include the metadata IBDF file from ISAAC, it is always included."><!-- this is important!! -->
-              <div style="display:inline-block"><span style="float: left"id="ibdf_selections"><h4>IBDF Files</h4></span></div>
+              <div style="display:inline-block"><span style="float: left" id="ibdf_selection_label"><h4>IBDF Files</h4></span></div>
               <input type="hidden" name="ibdf_selections" id="ibdf_selections">
               <%= select_tag 'ibdf_files',
                              options_from_collection_for_select(@idbf_files, :option_key, :option_value),
@@ -81,7 +81,7 @@
                                        multi: true
                              },
                              required: true,
-                             'aria-labelledby': 'ibdf_selections'
+                             'aria-labelledby': 'ibdf_selection_label'
               %>
             </div>
             <br>
