--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -65,12 +65,13 @@
                   <%= select_tag 'isaac_db', options_from_collection_for_select(@isaac_dbs, 'select_key', 'select_value'), {:prompt => '-- Select a terminology database --'} %>
                 </div>
                 <br>
-            <% end %>
+            <% end %>\
 
             <h3>Select the Tomcat Server</h3>
             <%= field_set_tag 'Select the Tomcat Server to Host this Deployment' do %>
                 <%= label_tag PrismeService::TOMCAT, 'Tomcat Server to Deploy to:' %><br>
                 <%= select_tag PrismeService::TOMCAT, options_from_collection_for_select(@tomcat_servers, 'select_key', 'select_value'), {:prompt => '-- Select the Tomcat Server --', required: true} %>
+                <%= select_tag PrismeService::TOMCAT, options_from_collection_for_select(@tomcat_servers.map do |e| e[:tomcat_ar] end.uniq, 'select_key', 'select_value'), {:prompt => '-- Select the Tomcat Server --', required: true} %>
             <% end %>
 
             <h3>Submit Deployment Request</h3>
