added modal wide75; updated tomcat server selection to include the isaac context for isaac deployments in support of the multiple context branch

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -229,6 +229,10 @@ label.arrow_box:before {
   width: 50%;
 }
 
+.modal-wide75 .modal-dialog {
+  width: 75%;
+}
+
 html, body {
   padding: 5px;
 }
