--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -1,21 +1,23 @@
 <div id="<%= deployment[:service_id] %>">
-
+  <% colspan = policy(:navigation).admin? ? 5 : 4 %>
   <table class="prisme-table table-striped table-hover">
     <caption title='<%= deployment[:service_desc] %>'>Service
       Name:&nbsp;&nbsp;<%= deployment[:service_name] %></caption>
     <thead>
     <tr>
-      <th scope="col" width="50%">Application</th>
+      <th scope="col" width="30%">Application</th>
+      <th scope="col">Version</th>
       <th scope="col" width="10%">State</th>
       <th scope="col" width="10%">Session Count</th>
-      <th scope="col" width="10%">Version</th>
-      <th scope="col" width="20%">Actions (Start/Stop/Undeploy)</th>
+      <% if policy(:navigation).admin? %>
+        <th scope="col" width="20%">Actions (Start/Stop/Undeploy)</th>
+      <% end %>
     </tr>
     </thead>
     <tbody>
     <% if deployment[:rows].empty? %>
         <tr>
-          <td colspan="5" style="color: <%= deployment[:available] ? 'green' : '#180606' %>; background: white">
+          <td colspan="<%= colspan %>" style="color: <%= deployment[:available] ? 'green' : '#180606' %>">
             <%= (deployment[:available] ?
                 'No supported applications are currently deployed to this server' :
                 'Failed to connect to Tomcat server. Either the server is unavailable or is mis-configured.') %>
@@ -24,13 +26,13 @@
     <% else %>
         <% deployment[:rows].each do |row| %>
             <tr>
-              <td<%= raw(row[:state].eql?('running') ? " data-href='#{row[:link]}'" : '') %>><%= row[:war_name] %></td>
-              <td><%= row[:state] %></td>
-              <td><%= row[:session_count] %></td>
+              <td<%= raw(row[:state].eql?('running') ? " data-href='#{row[:link]}'" : '') %>>
+                <span class="<%= row[:state].eql?('running') ? 'btn btn-primary' : 'not-running' %>"><%= row[:war_name] %></span>
+              </td>
               <td><%= row[:version] %>
                 <% if row[:isaac] && !row[:version].eql?('UNKNOWN') %>
-                    <div class="prismetooltip" style="float: right">
-                      <span class="fa fa-info-circle"></span>
+                    <div class="prismetooltip" style="float: left">
+                      <span class="fa fa-info-circle">&nbsp;&nbsp;</span>
                       <span class="tooltiptext">
                         Isaac Database <%= fetch_komets_isaac(row: row) %>
                         <% $log.debug("isaac database data row = #{row[:isaac].inspect}") %>
@@ -57,9 +59,13 @@
                 <% else %>
                 <% end %>
               </td>
-              <td<%= raw(policy(:navigation).admin? ? '' : ' style="color: #180606; font-weight: bold; background: white"') %>>
-                <%= (policy(:navigation).admin?) ? action_button_bar(row, deployment[:service_id]) : 'Requires Super User Privileges' %>
-              </td>
+              <td><%= row[:state] %></td>
+              <td><%= row[:session_count] %></td>
+              <% if policy(:navigation).admin? %>
+                <td>
+                  <%= action_button_bar(row, deployment[:service_id]) %>
+                </td>
+              <% end %>
             </tr>
         <% end %>
     <% end %>
