--- a/config/props/log.properties.erb
+++ b/config/props/log.properties.erb
@@ -4,6 +4,8 @@ pattern = [%l][%d][%F][%L] %m\n
 filename = prisme.log
 #filename_rails is the log where rails and active record logs its stuff.
 filename_rails = rails_prisme.log
+#filename_admin is the log where certain administrative events may be logged.
+filename_admin = prisme_admin.log
 #valid values for roll_by are 'number' and 'date'
 roll_by = number
 #caller_tracing values are true or false.  If set to true the file and line number data is logged
