refactored flash notifications with bootstrapNotifier

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -2,7 +2,7 @@
 <% flash.each do |name, msg| %>
     <% if msg.is_a?(String) %>
         var options = { message: '<%= msg %>'};
-        var settings = {type: 'success', allow_dismiss: false};
+        var settings = {type: 'success', allow_dismiss: true};
         flash_notify(options, settings);
     <% end %>
 <% end %>
