--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,11 +21,13 @@
             Checksum
           </a>
         </li>
+<!--
         <li role="menuitem">
-          <!--<a href="<%#= discovery_list_path %>" onclick="polling.checkPolling(polling.pollEnum.DISCOVERY);" title="Terminology Discovery">-->
+          &lt;!&ndash;<a href="<%#= discovery_list_path %>" onclick="polling.checkPolling(polling.pollEnum.DISCOVERY);" title="Terminology Discovery">&ndash;&gt;
             Discovery
-          <!--</a>-->
+          &lt;!&ndash;</a>&ndash;&gt;
         </li>
+-->
       </ul>
     </div>
 
