--- a/app/views/checksum/index.html.erb
+++ b/app/views/checksum/index.html.erb
@@ -47,7 +47,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <button type="button" class="btn btn-info btn-sm" onclick="site_selections();">checked</button>
+        <button type="button" class="btn btn-primary btn-sm" onclick="site_selections();">Select Site(s)</button>
       </div>
       <div class="modal-body" style="overflow:auto; max-height: 70vh;"><!-- style is for scrollable div -->
         <div id="checksum">
