--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -1,16 +1,17 @@
 <div id="<%= deployment[:service_id] %>">
-  <% colspan = policy(:navigation).admin? ? 5 : 4 %>
+  <% colspan = policy(:navigation).admin? ? 6 : 5 %>
   <table class="prisme-table table-striped table-hover">
     <caption title='<%= deployment[:service_desc] %>'>Service
       Name:&nbsp;&nbsp;<%= deployment[:service_name] %></caption>
     <thead>
     <tr>
-      <th scope="col" width="30%">Application</th>
-      <th scope="col">Version</th>
+      <th scope="col" width="15%">Application</th>
+      <th scope="col">Application Name</th>
+      <th scope="col" width="10%">Version</th>
       <th scope="col" width="10%">State</th>
       <th scope="col" width="10%">Session Count</th>
       <% if policy(:navigation).admin? %>
-        <th scope="col" width="20%">Actions (Start/Stop/Undeploy)</th>
+          <th scope="col" width="20%">Actions (Start/Stop/Undeploy)</th>
       <% end %>
     </tr>
     </thead>
@@ -26,14 +27,28 @@
     <% else %>
         <% deployment[:rows].each do |row| %>
             <tr>
-              <td<%= raw(row[:state].eql?('running') ? " data-href='#{row[:link]}'" : '') %>>
+              <td <%= raw(row[:state].eql?('running') ? " data-href='#{row[:link]}'" : '') %>>
                 <span class="<%= row[:state].eql?('running') ? 'btn btn-primary' : 'not-running' %>"><%= row[:war_name] %></span>
               </td>
               <td>
-                <%#= render 'uuid_prop', locals: {'uuid' => row[:uuid], 'uuid_prop_key' => row[:uuid_prop_key]} %>
-                <%= row[:version] %><br>
-                uuid=<%= row[:war_uuid] %>
-                <%= "isaac uuid = #{row[:isaac_war_uuid]}" if row[:isaac_war_uuid]%>
+                <% if row[:war_uuid] %>
+                    <% if row[:isaac_war_uuid] %>
+                        <%= row[:uuid_name] %> --> <%= row[:isaac_war_name] %>
+                    <% else %>
+                        <%= row[:uuid_name] %>
+                    <% end %>
+                    <!--<a id="SERVICE_ID-undeploy-DEPLOYMENT_ID" class="btn btn-default" role="button" onclick="tomcat_app(this, SERVICE_ID, 'undeploy', 'DEPLOYMENT');"><i class="fa fa-trash-o fa-fw" aria-hidden="true"></i>&nbsp;Undeploy</a>-->
+
+                    <button class="btn btn-default btn-sm" style="float: right" id="<%= row[:war_uuid] %>" onclick="greg(this)">Rename</button>
+                <% else %>
+                    N/A
+                <% end %>
+              </td>
+              <td>
+                <%= row[:version] %>
+                <%#= row[:war_uuid] %><%#= row[:uuid_name] %>
+                <%#= "isaac uuid = #{row[:isaac_war_uuid]}" if row[:isaac_war_uuid]%>
+                <%#= "isaac name = #{row[:isaac_war_name]}" if row[:isaac_war_name]%>
                 <% if row[:isaac] && !row[:version].eql?('UNKNOWN') %>
                     <div class="prismetooltip" style="float: left">
                       <span class="fa fa-info-circle">&nbsp;&nbsp;</span>
@@ -57,9 +72,9 @@
               <td><%= row[:state] %></td>
               <td><%= row[:session_count] %></td>
               <% if policy(:navigation).admin? %>
-                <td>
-                  <%= action_button_bar(row, deployment[:service_id]) %>
-                </td>
+                  <td>
+                    <%= action_button_bar(row, deployment[:service_id]) %>
+                  </td>
               <% end %>
             </tr>
         <% end %>
@@ -67,3 +82,30 @@
     </tbody>
   </table>
 </div>
+<!-- Modal -->
+<div id="warNameModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form">Rename Application</button>
+        <h5 style="padding-top: 5px">User E-Mail/SSOI Login:&nbsp;<strong><span id="edit_user_info_span"></span></strong></h5>
+      </div>
+      <div class="modal-body" style="overflow:auto; max-height: 70vh;"><!-- style is for scrollable div -->
+        <label for="war_name">Application Name</label>
+        <input type="text" name="war_name" id="war_name"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript" charset="utf-8">
+    function greg(elem) {
+        input = $('#war_name');
+        input.val('greg');
+        input.data('uuid', elem.id);
+        $('#warNameModal').modal('toggle');
+//        alert(elem.id);
+    }
+</script>
